Change config to postgres

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,8 +2,8 @@ appname = casdoor
 httpport = 8000
 runmode = dev
 copyrequestbody = true
-driverName = mysql
-dataSourceName = root:123456@tcp(localhost:3306)/
+driverName = postgresql
+dataSourceName = "user=jinaanapp password=p@ssw0rd host=localhost port=54322 sslmode=disable dbname=casdoor"
 dbName = casdoor
 tableNamePrefix =
 showSql = false
