--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,52 +76,52 @@ jobs:
           version: latest
           args: --disable-all -c dummy.yml -E=gofumpt --max-same-issues=0 --timeout 5m --modules-download-mode=mod
 
-  e2e:
-    name: e2e-test
-    runs-on: ubuntu-latest
-    needs: [ go-tests ]
-    services:
-      mysql:
-          image: mysql:5.7
-          env:
-            MYSQL_DATABASE: casdoor
-            MYSQL_ROOT_PASSWORD: 123456
-          ports:
-              - 3306:3306
-          options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '^1.16.5'
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16    
-      - name: back start
-        run: nohup go run ./main.go &
-        working-directory: ./
-      - name: front install
-        run: yarn install
-        working-directory: ./web
-      - name: front start
-        run: nohup yarn start &
-        working-directory: ./web  
-      - uses: cypress-io/github-action@v4
-        with:
-          working-directory: ./web
-          wait-on: 'http://localhost:7001'
-          wait-on-timeout: 180
+  # e2e:
+  #   name: e2e-test
+  #   runs-on: ubuntu-latest
+  #   needs: [ go-tests ]
+  #   services:
+  #     mysql:
+  #         image: mysql:5.7
+  #         env:
+  #           MYSQL_DATABASE: casdoor
+  #           MYSQL_ROOT_PASSWORD: 123456
+  #         ports:
+  #             - 3306:3306
+  #         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-go@v2
+  #       with:
+  #         go-version: '^1.16.5'
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 16    
+  #     - name: back start
+  #       run: nohup go run ./main.go &
+  #       working-directory: ./
+  #     - name: front install
+  #       run: yarn install
+  #       working-directory: ./web
+  #     - name: front start
+  #       run: nohup yarn start &
+  #       working-directory: ./web  
+  #     - uses: cypress-io/github-action@v4
+  #       with:
+  #         working-directory: ./web
+  #         wait-on: 'http://localhost:7001'
+  #         wait-on-timeout: 180
 
-      - uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-          name: cypress-screenshots
-          path: ./web/cypress/screenshots
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: cypress-videos
-          path: ./web/cypress/videos    
+  #     - uses: actions/upload-artifact@v3
+  #       if: failure()
+  #       with:
+  #         name: cypress-screenshots
+  #         path: ./web/cypress/screenshots
+  #     - uses: actions/upload-artifact@v3
+  #       if: always()
+  #       with:
+  #         name: cypress-videos
+  #         path: ./web/cypress/videos    
 
   release-and-push:
     name: Release And Push
