--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
   frontend:
     name: Front-end
     runs-on: ubuntu-latest
-    needs: [ go-tests ]
+    # needs: [ go-tests ]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -22,7 +22,7 @@ jobs:
   backend:
     name: Back-end
     runs-on: ubuntu-latest
-    needs: [ go-tests ]
+    # needs: [ go-tests ]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -37,7 +37,7 @@ jobs:
   linter:
     name: Go-Linter
     runs-on: ubuntu-latest
-    needs: [ go-tests ]
+    # needs: [ go-tests ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
