--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,21 +19,6 @@ jobs:
       - run: yarn install && CI=false yarn run build
         working-directory: ./web
 
-  backend:
-    name: Back-end
-    runs-on: ubuntu-latest
-    # needs: [ go-tests ]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '^1.16.5'
-      - run: go version
-      - name: Build
-        run: |
-          go build -race -ldflags "-extldflags '-static'"
-        working-directory: ./
-
   linter:
     name: Go-Linter
     runs-on: ubuntu-latest
@@ -53,10 +38,25 @@ jobs:
           version: latest
           args: --disable-all -c dummy.yml -E=gofumpt --max-same-issues=0 --timeout 5m --modules-download-mode=mod
   
+  backend:
+    name: Back-end
+    runs-on: ubuntu-latest
+    # needs: [ go-tests ]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16.5'
+      - run: go version
+      - name: Build
+        run: |
+          go build -race -ldflags "-extldflags '-static'"
+        working-directory: ./
+  
   release-and-push:
     name: Release And Push
     runs-on: ubuntu-latest
-    if: github.repository == 'casdoor/casdoor' && github.event_name == 'push'
+    if: github.repository == 'azanium/casdoor' && github.event_name == 'push'
     needs: [ frontend, backend, linter ]
     steps:
       - name: Checkout
