--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,26 +81,26 @@ jobs:
         id: get-current-tag
         uses: actions-ecosystem/action-get-latest-tag@v1.6.0
 
-      - name: Decide Should_Push Or Not
-        id: should_push
-        run: |
-          old_version=${{steps.get-previous-tag.outputs.tag}}
-          new_version=${{steps.get-current-tag.outputs.tag }}
+      # - name: Decide Should_Push Or Not
+      #   id: should_push
+      #   run: |
+      #     old_version=${{steps.get-previous-tag.outputs.tag}}
+      #     new_version=${{steps.get-current-tag.outputs.tag }}
 
-          old_array=(${old_version//\./ })
-          new_array=(${new_version//\./ })
+      #     old_array=(${old_version//\./ })
+      #     new_array=(${new_version//\./ })
 
-          if [ ${old_array[0]} != ${new_array[0]} ]
-          then 
-              echo ::set-output name=push::'true'
-          elif [ ${old_array[1]} != ${new_array[1]} ]
-          then 
-              echo ::set-output name=push::'true'
+      #     if [ ${old_array[0]} != ${new_array[0]} ]
+      #     then 
+      #         echo ::set-output name=push::'true'
+      #     elif [ ${old_array[1]} != ${new_array[1]} ]
+      #     then 
+      #         echo ::set-output name=push::'true'
               
-          else
-              echo ::set-output name=push::'false'
+      #     else
+      #         echo ::set-output name=push::'false'
               
-          fi
+      #     fi
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -113,14 +113,14 @@ jobs:
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
-        if: github.repository == 'casdoor/casdoor' && github.event_name == 'push' && steps.should_push.outputs.push=='true'
+        if: github.repository == 'azanium/casdoor' && github.event_name == 'push' && steps.should_push.outputs.push=='true'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v3
-        if: github.repository == 'casdoor/casdoor' && github.event_name == 'push' && steps.should_push.outputs.push=='true'
+        if: github.repository == 'azanium/casdoor' && github.event_name == 'push' && steps.should_push.outputs.push=='true'
         with:
           target: STANDARD
           platforms: linux/amd64,linux/arm64
@@ -129,7 +129,7 @@ jobs:
 
       - name: Push All In One Version to Docker Hub
         uses: docker/build-push-action@v3
-        if: github.repository == 'casdoor/casdoor' && github.event_name == 'push' && steps.should_push.outputs.push=='true'
+        if: github.repository == 'azanium/casdoor' && github.event_name == 'push' && steps.should_push.outputs.push=='true'
         with:
           target: ALLINONE
           platforms: linux/amd64,linux/arm64
