--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,24 +19,24 @@ jobs:
       - run: yarn install && CI=false yarn run build
         working-directory: ./web
 
-  linter:
-    name: Go-Linter
-    runs-on: ubuntu-latest
-    # needs: [ go-tests ]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '^1.16.5'
+  # linter:
+  #   name: Go-Linter
+  #   runs-on: ubuntu-latest
+  #   # needs: [ go-tests ]
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-go@v3
+  #       with:
+  #         go-version: '^1.16.5'
 
-      # gen a dummy config file
-      - run: touch dummy.yml
+  #     # gen a dummy config file
+  #     - run: touch dummy.yml
       
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
-          args: --disable-all -c dummy.yml -E=gofumpt --max-same-issues=0 --timeout 5m --modules-download-mode=mod
+  #     - name: golangci-lint
+  #       uses: golangci/golangci-lint-action@v3
+  #       with:
+  #         version: latest
+  #         args: --disable-all -c dummy.yml -E=gofumpt --max-same-issues=0 --timeout 5m --modules-download-mode=mod
   
   backend:
     name: Back-end
