--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Build
         # go build -race -ldflags "-extldflags '-static'"
         run: |
-          go build -ldflags="-extldflags=-static"
+          sh ./build.sh
         working-directory: ./
       - name: Copy binary
         uses: appleboy/scp-action@master
