--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
           username: root
           key: ${{ secrets.SSH_KEY }}
           port: 22
-          source: ./casdoor
+          source: ./casdoor_linux_amd64
           target: /usr/local/casdoor/bin
           overwrite: true
       
