--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,30 @@ jobs:
           source: ./casdoor_linux_amd64
           target: /usr/local/casdoor/bin
           overwrite: true
+
+      - name: Copy configs
+        uses: garygrossgarten/github-action-scp@release
+        with:
+          host: hls.iou.edu.gm
+          username: root
+          privateKey: ${{ secrets.SSH_KEY }}
+          port: 22
+          local: ./conf/app.conf
+          remote: /usr/local/casdoor/conf
+
+      - name: Copy systemd
+        uses: appleboy/scp-action@master
+        with:
+          host: hls.iou.edu.gm
+          username: root
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: ./deployments/etc/systemd/system/casdoor.service
+          target: /etc/systemd/system
+          strip_components: 5
+          debug: true
+        overwrite: true
+    
       
   # release-and-push:
   #   name: Release And Push
