--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
           privateKey: ${{ secrets.SSH_KEY }}
           port: 22
           local: ./conf/app.conf
-          remote: /usr/local/casdoor/conf
+          remote: /usr/local/casdoor/conf/app.conf
 
       - name: Copy systemd
         uses: appleboy/scp-action@master
@@ -83,7 +83,7 @@ jobs:
           port: 22
           source: ./deployments/etc/systemd/system/casdoor.service
           target: /etc/systemd/system
-          strip_components: 5
+          strip_components: 4
           debug: true
           overwrite: true
     
