--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,7 +2,7 @@ appname = casdoor
 httpport = 8000
 runmode = dev
 copyrequestbody = true
-driverName = postgresql
+driverName = postgres
 dataSourceName = "user=jinaanapp password=p@ssw0rd host=localhost port=54322 sslmode=disable dbname=casdoor"
 dbName = casdoor
 tableNamePrefix =
