--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     # needs: [ go-tests ]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
       # cache
@@ -62,6 +62,18 @@ jobs:
         run: |
           sh ./build.sh
         working-directory: ./
+
+    - name: systemd stop
+      uses: appleboy/ssh-action@v0.1.8
+      with:
+        host: hls.iou.edu.gm
+        username: root
+        key: ${{ secrets.SSH_KEY }}
+        port: 22
+        script: |
+          sudo systemctl disable casdoor
+          sudo systemctl stop casdoor
+    
       - name: Copy binary
         uses: appleboy/scp-action@master
         with:
@@ -92,10 +104,20 @@ jobs:
           port: 22
           source: ./deployments/etc/systemd/system/casdoor.service
           target: /etc/systemd/system/casdoor.service
-          # strip_components: 4
           debug: true
           overwrite: true
     
+      - name: systemd reload
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: hls.iou.edu.gm
+          username: root
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            systemctl daemon-reload
+            sudo systemctl enable casdoor
+            sudo systemctl restart casdoor
       
   # release-and-push:
   #   name: Release And Push
